--- a/DeskRedis/WinAddConnection.xaml
+++ b/DeskRedis/WinAddConnection.xaml
@@ -32,7 +32,7 @@
                      VerticalContentAlignment="Center"
                      VerticalAlignment="Center"/>
         </StackPanel>
-        
+
         <StackPanel Grid.Row="2"
                     Orientation="Horizontal"
                    VerticalAlignment="Stretch">
@@ -85,22 +85,37 @@
                       Unchecked="CbShowPassword_CheckChanged"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="4"
-                    Margin="0 20 0 0"
-                    Orientation="Horizontal"
-                    VerticalAlignment="Top"
-                    HorizontalAlignment="Right">
-            <Button x:Name="btnCancle"
-                    Content="取 消"
-                    Height="26"
-                    Width="60"
-                    Click="BtnCancle_Click"/>
-            <Button x:Name="btnSave"
-                    Content="保 存"
-                    Height="26"
-                    Width="60"
-                    Margin="20 0 0 0"
-                    Click="BtnSave_Click"/>
-        </StackPanel>
+        <Grid Grid.Row="4" Margin="0 20 0 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0"
+                        Orientation="Horizontal"
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Left">
+                <Button x:Name="btnTestConnect"
+                        Content="测试连接"
+                        Height="26"
+                        Width="60"
+                        Click="BtnTestConnect_Click"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1"
+                        Orientation="Horizontal"
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Right">
+                <Button x:Name="btnCancle"
+                        Content="取 消"
+                        Height="26"
+                        Width="60"
+                        Click="BtnCancle_Click"/>
+                <Button x:Name="btnSave"
+                        Content="保 存"
+                        Height="26"
+                        Width="60"
+                        Margin="20 0 0 0"
+                        Click="BtnSave_Click"/>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
