--- a/DeskRedis/App.xaml
+++ b/DeskRedis/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Style/Color.xaml"/>
+                <ResourceDictionary Source="Style/ScrollStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
