增加指定键搜索功能[1.19.0926.1128]

--- a/DeskRedis/WinMain.xaml
+++ b/DeskRedis/WinMain.xaml
@@ -68,7 +68,10 @@
                                VerticalAlignment="Center"/>
                     <TextBox x:Name="tbKey" 
                              Width="280"
+                             Height="26"
                              IsReadOnly="True"
+                             VerticalAlignment="Center"
+                             Padding="3 4"
                              VerticalContentAlignment="Center"/>
 
                     <TextBlock Text="TTL:"
