--- a/DeskRedis/WinSearchKey.xaml
+++ b/DeskRedis/WinSearchKey.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="DeskRedis.WinRenameKey"
+﻿<Window x:Class="DeskRedis.WinSearchKey"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DeskRedis"
         mc:Ignorable="d"
-        Title="重命名键" Height="120" Width="280"
+        Title="搜索键" Height="500" Width="400"
         WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="26"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="36"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <Border Grid.RowSpan="4"
                 BorderThickness="2"
@@ -21,7 +21,7 @@
         <UniformGrid Grid.Row="0"
                      Background="#6495ED"
                      Rows="1" Columns="2">
-            <TextBlock Text="重命名键"
+            <TextBlock Text="搜索键"
                        Grid.Row="0" Grid.Column="0"
                        Margin="5 0 0 0"
                        Foreground="#FFFFFF"
@@ -36,34 +36,38 @@
                     Margin="3"
                     Click="BtnClose_Click"/>
         </UniformGrid>
-        
+
         <StackPanel Grid.Row="1"
                     Margin="5 0"
                     Orientation="Horizontal"
-                    VerticalAlignment="Center"
+                    
                     HorizontalAlignment="Left">
-            <TextBlock Text="原key: "/>
-            <TextBlock x:Name="tblockKey"/>
-        </StackPanel>
-        
-        <StackPanel Grid.Row="2"
-                    Margin="5 0"
-                    Orientation="Horizontal"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Left">
-            <TextBlock Text="新key"/>
-            <TextBox x:Name="tbNewKey"
-                     Width="226"
-                     Margin="5 0 0 0"/>
+            <TextBlock Text="键: "
+                       VerticalAlignment="Center"/>
+            <TextBox x:Name="tbKey"
+                     Width="260"
+                     Margin="5 0 0 0"
+                     Padding="3 4"
+                     Height="26"/>
+            <Button x:Name="btnSearch"
+                    Width="70"
+                    Height="23"
+                    Margin="5 0 0 0"
+                    Content="查 询"
+                    Click="BtnSearch_Click"/>
         </StackPanel>
 
-        <Button x:Name="btnUpdate"
-                Content="修 改"
-                Width="50"
-                Height="20"
+        <TextBox x:Name="tbValue"
+                 Grid.Row="2"
+                 Margin="5"/>
+
+        <Button x:Name="btnExit"
                 Grid.Row="3"
-                Margin="0 0 10 0"
+                Width="70"
+                Height="23"
+                Content="确 定"
+                Margin="0 0 15 0"
                 HorizontalAlignment="Right"
-                Click="BtnUpdate_Click"/>
+                Click="BtnClose_Click"/>
     </Grid>
 </Window>
