--- a/DeskRedis/Style/ScrollStyle.xaml
+++ b/DeskRedis/Style/ScrollStyle.xaml
@@ -1,6 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:DeskRedis.Style">
+    
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/Style/BaseControlStyle.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+    
     <!-- ScrollViewer 滚动条 -->
     <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
         <Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -60,7 +65,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="for_scrollbar" TargetType="{x:Type ScrollBar}">
+    <Style x:Key="for_scrollbar" BasedOn="{StaticResource BaseControlStyle}" TargetType="{x:Type ScrollBar}">
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="false"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="false"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -125,6 +130,7 @@
         </Style.Triggers>
     </Style>
     <Style x:Key="for_scrollviewer"
+           BasedOn="{StaticResource BaseControlStyle}"
            TargetType="{x:Type ScrollViewer}">
         <Setter Property="BorderBrush" Value="LightGray"/>
         <Setter Property="BorderThickness" Value="0"/>
