--- a/DeskRedis/WinSearchKey.xaml
+++ b/DeskRedis/WinSearchKey.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DeskRedis"
+        xmlns:cc="clr-namespace:DeskRedis.Control.CustomControl"
         mc:Ignorable="d"
         Title="搜索键" Height="500" Width="400"
         WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen">
@@ -27,14 +28,18 @@
                        Foreground="#FFFFFF"
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"/>
-            <Button x:Name="btnClose"
-                    Content="关"
-                    Width="20"
-                    Height="20"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Right"
-                    Margin="3"
-                    Click="BtnClose_Click"/>
+            <cc:ImageButton x:Name="btnClose"
+                            Width="20"
+                            Height="20"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Right"
+                            Margin="3"
+                            Background="#FF0000"
+                            MouseHoverColor="#CCFF0000"
+                            MouseClickColor="#FF0000"
+                            CornerRadius="0"
+                            PathData="{StaticResource ResourceKey=Close}"
+                            Click="BtnClose_Click"/>
         </UniformGrid>
 
         <StackPanel Grid.Row="1"
@@ -49,25 +54,29 @@
                      Margin="5 0 0 0"
                      Padding="3 4"
                      Height="26"/>
-            <Button x:Name="btnSearch"
-                    Width="70"
-                    Height="23"
-                    Margin="5 0 0 0"
-                    Content="查 询"
-                    Click="BtnSearch_Click"/>
+            <cc:PathButton x:Name="btnSearch"
+                           Width="70"
+                           Height="23"
+                           Margin="5 0 0 0"
+                           Content="查 询"
+                           CornerRadius="0"
+                           PathData="{StaticResource ResourceKey=Search}"
+                           Click="BtnSearch_Click"/>
         </StackPanel>
 
         <TextBox x:Name="tbValue"
                  Grid.Row="2"
                  Margin="5"/>
 
-        <Button x:Name="btnExit"
-                Grid.Row="3"
-                Width="70"
-                Height="23"
-                Content="确 定"
-                Margin="0 0 15 0"
-                HorizontalAlignment="Right"
-                Click="BtnClose_Click"/>
+        <cc:PathButton x:Name="btnExit"
+                       Grid.Row="3"
+                       Width="70"
+                       Height="23"
+                       Content="退 出"
+                       Margin="0 0 15 0"
+                       CornerRadius="0"
+                       PathData="{StaticResource ResourceKey=Cancel}"
+                       HorizontalAlignment="Right"
+                       Click="BtnClose_Click"/>
     </Grid>
 </Window>
