重写左侧树形列表样式[2.19.1120.2129]

--- a/DeskRedis/App.xaml
+++ b/DeskRedis/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="Style/Color.xaml"/>
                 <ResourceDictionary Source="Style/PathData.xaml"/>
                 <ResourceDictionary Source="Style/ScrollStyle.xaml"/>
+                <ResourceDictionary Source="Style/TreeViewItemStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
