合并更新。[update by y430p]

--- a/DeskRedis/App.xaml
+++ b/DeskRedis/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="Style/PathData.xaml"/>
                 <ResourceDictionary Source="Style/ScrollStyle.xaml"/>
                 <ResourceDictionary Source="Style/TreeViewItemStyle.xaml"/>
+                <ResourceDictionary Source="Style/WindowStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
