--- a/DeskRedis/WinMain.xaml
+++ b/DeskRedis/WinMain.xaml
@@ -1,79 +1,22 @@
-﻿<Window x:Class="DeskRedis.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DeskRedis"
-        xmlns:cc="clr-namespace:DeskRedis.Control.CustomControl"
-        mc:Ignorable="d"
-        Title="RedisClient" Height="800" Width="1300" MinHeight="600" MinWidth="1000"
-        WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen" ResizeMode="CanResizeWithGrip">
+﻿<cc:NormalWindow x:Class="DeskRedis.MainWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:local="clr-namespace:DeskRedis"
+                 xmlns:cc="clr-namespace:DeskRedis.Control.CustomControl"
+                 mc:Ignorable="d"
+                 Title="RedisClient" Height="800" Width="1300" MinHeight="600" MinWidth="1000" Background="#FFFFFF">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Border BorderThickness="1"
                 BorderBrush="#6495ED"
                 Grid.RowSpan="3"/>
-        <UniformGrid Grid.Row="0"
-                     x:Name="gridTitle"
-                     Background="#6495ED"
-                     Rows="1" Columns="2"
-                     MouseLeftButtonDown="GridTitle_MouseLeftButtonDown">
-            <StackPanel Grid.Column="0"
-                        Orientation="Horizontal"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Left">
-                <Image Source="Images/redis.ico"
-                       Width="20"
-                       Margin="5 0 0 0"/>
-                <TextBlock Text="RedisClient"
-                           Grid.Row="0"
-                           Margin="10 0 0 0"
-                           Foreground="#FFFFFF"
-                           VerticalAlignment="Center"
-                           HorizontalAlignment="Left"/>
-            </StackPanel>
-
-            <StackPanel Grid.Column="1"
-                        Orientation="Horizontal"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Right">
-                <cc:ImageButton x:Name="btnMin"
-                                Width="28"
-                                Height="28"
-                                Background="#6495ED"
-                                MouseHoverColor="#CCB9D3EE"
-                                MouseClickColor="#B9D3EE"
-                                CornerRadius="0"
-                                ImageHeight="2"
-                                PathData="{StaticResource ResourceKey=Min}"
-                                Click="BtnMin_Click"/>
-                <cc:ImageButton x:Name="btnMax"
-                                Width="28"
-                                Height="28"
-                                Background="#6495ED"
-                                MouseHoverColor="#CCB9D3EE"
-                                MouseClickColor="#B9D3EE"
-                                CornerRadius="0"
-                                PathData="{StaticResource ResourceKey=Max}"/>
-                <cc:ImageButton x:Name="btnExit"
-                                Width="28"
-                                Height="28"
-                                Margin="0 0 1 0"
-                                Background="#FF0000"
-                                MouseHoverColor="#CCFF0000"
-                                MouseClickColor="#FF0000"
-                                CornerRadius="0"
-                                PathData="{StaticResource ResourceKey=Close}"
-                                Click="BtnExit_Click"/>
-            </StackPanel>
-        </UniformGrid>
-
         <!--基础操作-->
-        <Border Grid.Row="1"
+        <Border Grid.Row="0"
                 BorderThickness="0 0 0 1"
                 BorderBrush="#EBEBEB">
             <StackPanel Orientation="Horizontal"
@@ -98,7 +41,8 @@
             </StackPanel>
         </Border>
 
-        <Grid Grid.Row="2">
+        <!--redis键列表和redis值内容-->
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="350" MinWidth="280" MaxWidth="500"/>
                 <ColumnDefinition Width="10"/>
@@ -194,7 +138,10 @@
             </Grid>
         </Grid>
 
+        
+        <!--加载效果-->
         <Grid x:Name="gridLoading"
+              Grid.Row="0"
               Grid.RowSpan="2"
               Visibility="Collapsed"
               Background="#1A808080">
@@ -295,4 +242,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Window>
+</cc:NormalWindow>
