1.修复已知bug，2.重构窗体样式和外壳。[2.19.1210.2159]

--- a/DeskRedis/Control/Style/PathButtonStyle.xaml
+++ b/DeskRedis/Control/Style/PathButtonStyle.xaml
@@ -7,10 +7,10 @@
         <Setter Property="MinHeight" Value="26"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Foreground" Value="White"/>
-        <Setter Property="BorderBrush" Value="#6495ED"/>
-        <Setter Property="Background" Value="#6495ED"/>
-        <Setter Property="MouseHoverColor" Value="#CC6495ED"/>
-        <Setter Property="MouseClickColor" Value="#6495ED"/>
+        <Setter Property="BorderBrush" Value="#5B6D99"/>
+        <Setter Property="Background" Value="#5B6D99"/>
+        <Setter Property="MouseHoverColor" Value="#CC5B6D99"/>
+        <Setter Property="MouseClickColor" Value="#5B6D99"/>
         <Setter Property="CornerRadius" Value="10"/>
         <Setter Property="ImageHeight" Value="15"/>
         <Setter Property="ImageWidht" Value="15"/>
