--- a/DeskRedis/WinAddConnection.xaml
+++ b/DeskRedis/WinAddConnection.xaml
@@ -1,62 +1,27 @@
-﻿<Window x:Class="DeskRedis.WinAddConnection"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DeskRedis"
-        xmlns:cc="clr-namespace:DeskRedis.Control.CustomControl"
-        mc:Ignorable="d"
-        Title="添加新连接" Height="250" Width="500" 
-        WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen" Icon="redis.ico">
+﻿<cc:DialogWindow x:Class="DeskRedis.WinAddConnection"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:local="clr-namespace:DeskRedis"
+                 xmlns:cc="clr-namespace:DeskRedis.Control.CustomControl"
+                 mc:Ignorable="d"
+                 Title="添加新连接" Height="250" Width="500" Background="#FFFFFF" Icon="redis.ico">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Border Grid.RowSpan="6"
-                BorderBrush="#6495ED"
-                BorderThickness="1"/>
 
-        <UniformGrid Grid.Row="0"
-                     x:Name="gridTitle"
-                     Background="#6495ED"
-                     Rows="1" Columns="2"
-                     MouseLeftButtonDown="GridTitle_MouseLeftButtonDown">
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center">
-                <Image Source="/Images/redis.ico"
-                       Width="20"
-                       Margin="5 0 0 0"/>
-                <TextBlock Text="添加新连接"
-                           Grid.Row="0" Grid.Column="0"
-                           Margin="10 0 0 0"
-                           Foreground="#FFFFFF"
-                           VerticalAlignment="Center" HorizontalAlignment="Left" Width="48"/>
-            </StackPanel>
-            <cc:ImageButton x:Name="btnClose"
-                            Width="20"
-                            Height="20"
-                            Margin="0 0 5 0"
-                            Background="#FF0000"
-                            MouseHoverColor="#CCFF0000"
-                            MouseClickColor="#FF0000"
-                            CornerRadius="0"
-                            HorizontalAlignment="Right"
-                            PathData="{StaticResource ResourceKey=Close}"
-                            Click="BtnClose_Click"/>
-        </UniformGrid>
-        
-        <TextBlock Grid.Row="1"
+        <TextBlock Grid.Row="0"
                    Text="连接信息"
                    Margin="10 0"
                    VerticalAlignment="Center"/>
 
-        <StackPanel Grid.Row="2"
+        <StackPanel Grid.Row="1"
                     Orientation="Horizontal"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Stretch"
@@ -71,7 +36,7 @@
                      VerticalAlignment="Center"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="3"
+        <StackPanel Grid.Row="2"
                     Orientation="Horizontal"
                     VerticalAlignment="Stretch"
                     Margin="10 0">
@@ -95,7 +60,7 @@
                      VerticalAlignment="Center"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="4"
+        <StackPanel Grid.Row="3"
                     Orientation="Horizontal"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
@@ -125,7 +90,7 @@
                       Unchecked="CbShowPassword_CheckChanged"/>
         </StackPanel>
 
-        <Grid Grid.Row="5" Margin="10 20 10 0">
+        <Grid Grid.Row="4" Margin="10 20 10 0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
@@ -164,4 +129,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</Window>
+</cc:DialogWindow>
