--- a/DeskRedis/WinSearchKey.xaml
+++ b/DeskRedis/WinSearchKey.xaml
@@ -1,59 +1,32 @@
-﻿<Window x:Class="DeskRedis.WinSearchKey"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DeskRedis"
-        xmlns:cc="clr-namespace:DeskRedis.Control.CustomControl"
-        mc:Ignorable="d"
-        Title="搜索键" Height="500" Width="400"
-        WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen">
+﻿<cc:DialogWindow x:Class="DeskRedis.WinSearchKey"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:local="clr-namespace:DeskRedis"
+                 xmlns:cc="clr-namespace:DeskRedis.Control.CustomControl"
+                 mc:Ignorable="d"
+                 Title="搜索键" Height="500" Width="400" Background="#FFFFFF" Icon="redis.ico">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="26"/>
             <RowDefinition Height="36"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
-        <Border Grid.RowSpan="4"
-                BorderThickness="2"
-                BorderBrush="#6495ED"/>
-
-        <UniformGrid Grid.Row="0"
-                     Background="#6495ED"
-                     Rows="1" Columns="2">
-            <TextBlock Text="搜索键"
-                       Grid.Row="0" Grid.Column="0"
-                       Margin="5 0 0 0"
-                       Foreground="#FFFFFF"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Left"/>
-            <cc:ImageButton x:Name="btnClose"
-                            Width="20"
-                            Height="20"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Right"
-                            Margin="3"
-                            Background="#FF0000"
-                            MouseHoverColor="#CCFF0000"
-                            MouseClickColor="#FF0000"
-                            CornerRadius="0"
-                            PathData="{StaticResource ResourceKey=Close}"
-                            Click="BtnClose_Click"/>
-        </UniformGrid>
-
-        <StackPanel Grid.Row="1"
+        
+        <StackPanel Grid.Row="0"
                     Margin="5 0"
                     Orientation="Horizontal"
-                    
+                    VerticalAlignment="Stretch"
                     HorizontalAlignment="Left">
             <TextBlock Text="键: "
                        VerticalAlignment="Center"/>
             <TextBox x:Name="tbKey"
                      Width="260"
                      Margin="5 0 0 0"
-                     Padding="3 4"
-                     Height="26"/>
+                     Height="26"
+                     VerticalContentAlignment="Center"
+                     VerticalAlignment="Center"/>
             <cc:PathButton x:Name="btnSearch"
                            Width="70"
                            Height="23"
@@ -65,11 +38,11 @@
         </StackPanel>
 
         <TextBox x:Name="tbValue"
-                 Grid.Row="2"
+                 Grid.Row="1"
                  Margin="5"/>
 
         <cc:PathButton x:Name="btnExit"
-                       Grid.Row="3"
+                       Grid.Row="2"
                        Width="70"
                        Height="23"
                        Content="退 出"
@@ -79,4 +52,4 @@
                        HorizontalAlignment="Right"
                        Click="BtnClose_Click"/>
     </Grid>
-</Window>
+</cc:DialogWindow>
