增加菜单节点的快捷操作按钮。提供操作便利性。[2.20.0627.1520]

--- a/DeskRedis/Style/TreeViewItemStyle.xaml
+++ b/DeskRedis/Style/TreeViewItemStyle.xaml
@@ -182,6 +182,19 @@
                                             Margin="0 0 10 0"
                                             ToolTip="刷新"
                                             PathData="{StaticResource ResourceKey=Refresh}"/>
+                            <cc:ImageButton x:Name="btnDelete"
+                                            Width="22"
+                                            Height="22"
+                                            ImageHeight="18"
+                                            ImageWidht="18"
+                                            Foreground="#FFFFFF"
+                                            Background="#6495ED"
+                                            MouseHoverColor="#CCB9D3EE"
+                                            MouseClickColor="#B9D3EE"
+                                            CornerRadius="0"
+                                            Margin="0 0 10 0"
+                                            ToolTip="删除"
+                                            PathData="{StaticResource ResourceKey=Delete}"/>
                             <cc:ImageButton x:Name="btnClear"
                                             Width="22"
                                             Height="22"
