数据库节点增加“添加键”操作按钮。[2.20.0701.1519]

--- a/DeskRedis/App.xaml
+++ b/DeskRedis/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Style/ScrollStyle.xaml"/>
                 <ResourceDictionary Source="Style/TreeViewItemStyle.xaml"/>
                 <ResourceDictionary Source="Style/WindowStyle.xaml"/>
+                <ResourceDictionary Source="Style/ComboBoxStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
