--- a/DeskRedis/Style/TreeViewItemStyle.xaml
+++ b/DeskRedis/Style/TreeViewItemStyle.xaml
@@ -169,6 +169,32 @@
                                     Orientation="Horizontal"
                                     HorizontalAlignment="Right"
                                     VerticalAlignment="Center">
+                            <cc:ImageButton x:Name="btnAdd"
+                                            Width="22"
+                                            Height="22"
+                                            ImageHeight="18"
+                                            ImageWidht="18"
+                                            Foreground="#FFFFFF"
+                                            Background="#6495ED"
+                                            MouseHoverColor="#CCB9D3EE"
+                                            MouseClickColor="#B9D3EE"
+                                            CornerRadius="0"
+                                            Margin="0 0 10 0"
+                                            ToolTip="添加"
+                                            PathData="{StaticResource ResourceKey=Add}"/>
+                            <cc:ImageButton x:Name="btnEdit"
+                                            Width="22"
+                                            Height="22"
+                                            ImageHeight="18"
+                                            ImageWidht="18"
+                                            Foreground="#FFFFFF"
+                                            Background="#6495ED"
+                                            MouseHoverColor="#CCB9D3EE"
+                                            MouseClickColor="#B9D3EE"
+                                            CornerRadius="0"
+                                            Margin="0 0 10 0"
+                                            ToolTip="编辑"
+                                            PathData="{StaticResource ResourceKey=Edit}"/>
                             <cc:ImageButton x:Name="btnRefresh"
                                             Width="22"
                                             Height="22"
